//
// Copyright 2023 The Chainloop Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package controlplane.v1;

option go_package = "github.com/chainloop-dev/chainloop/app/controlplane/api/controlplane/v1;v1";

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

service RobotAccountService {
	rpc Create (RobotAccountServiceCreateRequest) returns (RobotAccountServiceCreateResponse);
	rpc List (RobotAccountServiceListRequest) returns (RobotAccountServiceListResponse);
	rpc Revoke (RobotAccountServiceRevokeRequest) returns (RobotAccountServiceRevokeResponse);
}

message RobotAccountServiceCreateRequest {
  string name = 1; 
  string workflow_id = 2 [(buf.validate.field).string.uuid = true];
}

message RobotAccountServiceCreateResponse {
  RobotAccountFull result = 1;

  message RobotAccountFull {
      string id = 1;
      string name = 2;
      string workflow_id = 3;
      google.protobuf.Timestamp created_at = 4;
      google.protobuf.Timestamp revoked_at = 5;
      // The key is returned only during creation
      string key = 6;
  }
}

message RobotAccountServiceRevokeRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message RobotAccountServiceRevokeResponse {}

message RobotAccountServiceListRequest {
  string workflow_id = 1 [(buf.validate.field).string.uuid = true];
  bool include_revoked = 2;
}

message RobotAccountServiceListResponse {
  repeated RobotAccountItem result = 1;

  message RobotAccountItem {
    string id = 1;
    string name = 2;
    string workflow_id = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp revoked_at = 5;
  }
}